--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/3D Models/Grey box/greybox.fbx.meta
+Assets/3D Models/Grey box/Nightmare demo 2.mb.meta
+Assets/3D Models/Grey box/Nightmare demo 2.mb.meta
