ignore meta files

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ sysinfo.txt
 Assets/3D Models/Grey box/greybox.fbx.meta
 Assets/3D Models/Grey box/Nightmare demo 2.mb.meta
 Assets/3D Models/Grey box/Nightmare demo 2.mb.meta
+*.meta
